src/core/asm/asm.gram.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.6 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
    offset: number;
    line: number;
    column: number;
}

export interface IFileRange {
    start: IFilePosition;
    end: IFilePosition;
}

export interface ILiteralExpectation {
    type: "literal";
    text: string;
    ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {
}

export interface IClassExpectation {
    type: "class";
    parts: IClassParts;
    inverted: boolean;
    ignoreCase: boolean;
}

export interface IAnyExpectation {
    type: "any";
}

export interface IEndExpectation {
    type: "end";
}

export interface IOtherExpectation {
    type: "other";
    description: string;
}

export type Expectation =
    ILiteralExpectation
    | IClassExpectation
    | IAnyExpectation
    | IEndExpectation
    | IOtherExpectation;

export class SyntaxError extends Error {
    public static buildMessage(expected: Expectation[], found: string | null) {
        function hex(ch: string): string {
            return ch.charCodeAt(0).toString(16).toUpperCase();
        }

        function literalEscape(s: string): string {
            return s
                .replace(/\\/g, "\\\\")
                .replace(/"/g, "\\\"")
                .replace(/\0/g, "\\0")
                .replace(/\t/g, "\\t")
                .replace(/\n/g, "\\n")
                .replace(/\r/g, "\\r")
                .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
                .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
        }

        function classEscape(s: string): string {
            return s
                .replace(/\\/g, "\\\\")
                .replace(/\]/g, "\\]")
                .replace(/\^/g, "\\^")
                .replace(/-/g, "\\-")
                .replace(/\0/g, "\\0")
                .replace(/\t/g, "\\t")
                .replace(/\n/g, "\\n")
                .replace(/\r/g, "\\r")
                .replace(/[\x00-\x0F]/g, (ch) => "\\x0" + hex(ch))
                .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x" + hex(ch));
        }

        function describeExpectation(expectation: Expectation) {
            switch (expectation.type) {
                case "literal":
                    return "\"" + literalEscape(expectation.text) + "\"";
                case "class":
                    const escapedParts = expectation.parts.map((part) => {
                        return Array.isArray(part)
                            ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
                            : classEscape(part);
                    });

                    return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
                case "any":
                    return "any character";
                case "end":
                    return "end of input";
                case "other":
                    return expectation.description;
            }
        }

        function describeExpected(expected1: Expectation[]) {
            const descriptions = expected1.map(describeExpectation);
            let i: number;
            let j: number;

            descriptions.sort();

            if (descriptions.length > 0) {
                for (i = 1, j = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }

            switch (descriptions.length) {
                case 1:
                    return descriptions[0];

                case 2:
                    return descriptions[0] + " or " + descriptions[1];

                default:
                    return descriptions.slice(0, -1).join(", ")
                        + ", or "
                        + descriptions[descriptions.length - 1];
            }
        }

        function describeFound(found1: string | null) {
            return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
        }

        return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
    }

    public message: string;
    public expected: Expectation[];
    public found: string | null;
    public location: IFileRange;
    public name: string;

    constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
        super();
        this.message = message;
        this.expected = expected;
        this.found = found;
        this.location = location;
        this.name = "SyntaxError";

        if (typeof (Error as any).captureStackTrace === "function") {
            (Error as any).captureStackTrace(this, SyntaxError);
        }
    }
}

function peg$parse(input: string, options?: IParseOptions) {
    options = options !== undefined ? options : {};

    const peg$FAILED: Readonly<{}> = {};

    const peg$startRuleFunctions: { [id: string]: any } = {START: peg$parseSTART};
    let peg$startRuleFunction: () => any = peg$parseSTART;

    const peg$c0 = function (e: any): any {
        return e
    };
    const peg$c1 = function (label: any, comment: any): any {
        return {
            label,
            operation: null,
            comment,
            location: location()
        }
    };
    const peg$c2 = function (label: any, code: any, operands: any, comment: any): any {
        return {label, operation: {code, operands}, comment, location: location()}
    };
    const peg$c3 = /^[a-zA-Z]/;
    const peg$c4 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
    const peg$c5 = function (head: any): any {
        return head.join('')
    };
    const peg$c6 = ",";
    const peg$c7 = peg$literalExpectation(",", false);
    const peg$c8 = function (head: any, tail: any): any {
        return [head, ...tail.map((e: any[]) => e[2])]
    };
    const peg$c9 = ":";
    const peg$c10 = peg$literalExpectation(":", false);
    const peg$c11 = function (l: any): any {
        return l
    };
    const peg$c12 = /^[a-zA-Z0-9]/;
    const peg$c13 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
    const peg$c14 = function (head: any, tail: any): any {
        return head + tail.join('')
    };
    const peg$c15 = ";";
    const peg$c16 = peg$literalExpectation(";", false);
    const peg$c17 = /^[^\n]/;
    const peg$c18 = peg$classExpectation(["\n"], true, false);
    const peg$c19 = function (comment: any): any {
        return comment.join('')
    };
    const peg$c20 = function (d: any): any {
        return parseInt(d.join(''), 10)
    };
    const peg$c21 = "B";
    const peg$c22 = peg$literalExpectation("B", false);
    const peg$c23 = function (d: any): any {
        return parseInt(d.join(''), 2)
    };
    const peg$c24 = "H";
    const peg$c25 = peg$literalExpectation("H", false);
    const peg$c26 = function (d: any): any {
        return parseInt(d.join(''), 16)
    };
    const peg$c27 = /^[0-9]/;
    const peg$c28 = peg$classExpectation([["0", "9"]], false, false);
    const peg$c29 = /^[0-1]/;
    const peg$c30 = peg$classExpectation([["0", "1"]], false, false);
    const peg$c31 = /^[ \t]/;
    const peg$c32 = peg$classExpectation([" ", "\t"], false, false);
    const peg$c33 = /^[\n\t ]/;
    const peg$c34 = peg$classExpectation(["\n", "\t", " "], false, false);

    let peg$currPos = 0;
    let peg$savedPos = 0;
    const peg$posDetailsCache = [{line: 1, column: 1}];
    let peg$maxFailPos = 0;
    let peg$maxFailExpected: Expectation[] = [];
    let peg$silentFails = 0;

    let peg$result;

    if (options.startRule !== undefined) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text(): string {
        return input.substring(peg$savedPos, peg$currPos);
    }

    function location(): IFileRange {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description: string, location1?: IFileRange) {
        location1 = location1 !== undefined
            ? location1
            : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildStructuredError(
            [peg$otherExpectation(description)],
            input.substring(peg$savedPos, peg$currPos),
            location1
        );
    }

    function error(message: string, location1?: IFileRange) {
        location1 = location1 !== undefined
            ? location1
            : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildSimpleError(message, location1);
    }

    function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
        return {type: "literal", text: text1, ignoreCase: ignoreCase};
    }

    function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
        return {type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase};
    }

    function peg$anyExpectation(): IAnyExpectation {
        return {type: "any"};
    }

    function peg$endExpectation(): IEndExpectation {
        return {type: "end"};
    }

    function peg$otherExpectation(description: string): IOtherExpectation {
        return {type: "other", description: description};
    }

    function peg$computePosDetails(pos: number) {
        let details = peg$posDetailsCache[pos];
        let p;

        if (details) {
            return details;
        } else {
            p = pos - 1;
            while (!peg$posDetailsCache[p]) {
                p--;
            }

            details = peg$posDetailsCache[p];
            details = {
                line: details.line,
                column: details.column
            };

            while (p < pos) {
                if (input.charCodeAt(p) === 10) {
                    details.line++;
                    details.column = 1;
                } else {
                    details.column++;
                }

                p++;
            }

            peg$posDetailsCache[pos] = details;

            return details;
        }
    }

    function peg$computeLocation(startPos: number, endPos: number): IFileRange {
        const startPosDetails = peg$computePosDetails(startPos);
        const endPosDetails = peg$computePosDetails(endPos);

        return {
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column
            }
        };
    }

    function peg$fail(expected1: Expectation) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }

        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected1);
    }

    function peg$buildSimpleError(message: string, location1: IFileRange) {
        return new SyntaxError(message, [], "", location1);
    }

    function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
        return new SyntaxError(
            SyntaxError.buildMessage(expected1, found),
            expected1,
            found,
            location1
        );
    }

    function peg$parseSTART(): any {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse__();
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse__();
        }
        if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$parseEXP();
            if (s3 === peg$FAILED) {
                s3 = peg$parseEXP_COMMENT();
                if (s3 === peg$FAILED) {
                    s3 = peg$parseEXP_LABEL();
                }
            }
            while (s3 !== peg$FAILED) {
                s2.push(s3);
                s3 = peg$parseEXP();
                if (s3 === peg$FAILED) {
                    s3 = peg$parseEXP_COMMENT();
                    if (s3 === peg$FAILED) {
                        s3 = peg$parseEXP_LABEL();
                    }
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s2);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseEXP_COMMENT(): any {
        let s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseLABEL_DEFINITION();
            if (s2 === peg$FAILED) {
                s2 = null;
            }
            if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parse_();
                while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = peg$parse_();
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseCOMMENT();
                    if (s4 !== peg$FAILED) {
                        s5 = [];
                        s6 = peg$parse__();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parse__();
                        }
                        if (s5 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c1(s2, s4);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseEXP_LABEL(): any {
        let s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseLABEL_DEFINITION();
            if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parse_();
                while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = peg$parse_();
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseCOMMENT();
                    if (s4 === peg$FAILED) {
                        s4 = null;
                    }
                    if (s4 !== peg$FAILED) {
                        s5 = [];
                        s6 = peg$parse__();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parse__();
                        }
                        if (s5 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c1(s2, s4);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseEXP(): any {
        let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
            s1.push(s2);
            s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseLABEL_DEFINITION();
            if (s2 === peg$FAILED) {
                s2 = null;
            }
            if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parse_();
                while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = peg$parse_();
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseCode();
                    if (s4 !== peg$FAILED) {
                        s5 = [];
                        s6 = peg$parse_();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parse_();
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parseOperands();
                            if (s6 === peg$FAILED) {
                                s6 = null;
                            }
                            if (s6 !== peg$FAILED) {
                                s7 = [];
                                s8 = peg$parse_();
                                while (s8 !== peg$FAILED) {
                                    s7.push(s8);
                                    s8 = peg$parse_();
                                }
                                if (s7 !== peg$FAILED) {
                                    s8 = peg$parseCOMMENT();
                                    if (s8 === peg$FAILED) {
                                        s8 = null;
                                    }
                                    if (s8 !== peg$FAILED) {
                                        s9 = [];
                                        s10 = peg$parse__();
                                        while (s10 !== peg$FAILED) {
                                            s9.push(s10);
                                            s10 = peg$parse__();
                                        }
                                        if (s9 !== peg$FAILED) {
                                            peg$savedPos = s0;
                                            s1 = peg$c2(s2, s4, s6, s8);
                                            s0 = s1;
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseCode(): any {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = [];
        if (peg$c3.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c4);
            }
        }
        if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                if (peg$c3.test(input.charAt(peg$currPos))) {
                    s2 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c4);
                    }
                }
            }
        } else {
            s1 = peg$FAILED;
        }
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c5(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parseOperands(): any {
        let s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = peg$parseOperand();
        if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
                s4 = peg$c6;
                peg$currPos++;
            } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c7);
                }
            }
            if (s4 !== peg$FAILED) {
                s5 = peg$parse_();
                if (s5 === peg$FAILED) {
                    s5 = null;
                }
                if (s5 !== peg$FAILED) {
                    s6 = peg$parseOperand();
                    if (s6 !== peg$FAILED) {
                        s4 = [s4, s5, s6];
                        s3 = s4;
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                }
            } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
            }
            while (s3 !== peg$FAILED) {
                s2.push(s3);
                s3 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 44) {
                    s4 = peg$c6;
                    peg$currPos++;
                } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c7);
                    }
                }
                if (s4 !== peg$FAILED) {
                    s5 = peg$parse_();
                    if (s5 === peg$FAILED) {
                        s5 = null;
                    }
                    if (s5 !== peg$FAILED) {
                        s6 = peg$parseOperand();
                        if (s6 !== peg$FAILED) {
                            s4 = [s4, s5, s6];
                            s3 = s4;
                        } else {
                            peg$currPos = s3;
                            s3 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s3;
                        s3 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s3;
                    s3 = peg$FAILED;
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c8(s1, s2);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseOperand(): any {
        let s0;

        s0 = peg$parseLABEL();
        if (s0 === peg$FAILED) {
            s0 = peg$parseNUMBER();
        }

        return s0;
    }

    function peg$parseLABEL_DEFINITION(): any {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = peg$parseLABEL();
        if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 58) {
                s2 = peg$c9;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c10);
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c11(s1);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseLABEL(): any {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        if (peg$c3.test(input.charAt(peg$currPos))) {
            s1 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c4);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = [];
            if (peg$c12.test(input.charAt(peg$currPos))) {
                s3 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c13);
                }
            }
            while (s3 !== peg$FAILED) {
                s2.push(s3);
                if (peg$c12.test(input.charAt(peg$currPos))) {
                    s3 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c13);
                    }
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c14(s1, s2);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseCOMMENT(): any {
        let s0, s1, s2, s3;

        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 59) {
            s1 = peg$c15;
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c16);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = [];
            if (peg$c17.test(input.charAt(peg$currPos))) {
                s3 = input.charAt(peg$currPos);
                peg$currPos++;
            } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c18);
                }
            }
            while (s3 !== peg$FAILED) {
                s2.push(s3);
                if (peg$c17.test(input.charAt(peg$currPos))) {
                    s3 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s3 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c18);
                    }
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c19(s2);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseNUMBER(): any {
        let s0;

        s0 = peg$parseHEX();
        if (s0 === peg$FAILED) {
            s0 = peg$parseDEC();
            if (s0 === peg$FAILED) {
                s0 = peg$parseBIN();
            }
        }

        return s0;
    }

    function peg$parseDEC(): any {
        let s0, s1;

        s0 = peg$currPos;
        s1 = peg$parseDIGITS();
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c20(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parseBIN(): any {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = peg$parseDIGITS();
        if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 66) {
                s2 = peg$c21;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c22);
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c23(s1);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseHEX(): any {
        let s0, s1, s2;

        s0 = peg$currPos;
        s1 = peg$parseDIGITS();
        if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 72) {
                s2 = peg$c24;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c25);
                }
            }
            if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c26(s1);
                s0 = s1;
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseDIGITS(): any {
        let s0, s1;

        s0 = [];
        s1 = peg$parseDIGIT();
        if (s1 !== peg$FAILED) {
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                s1 = peg$parseDIGIT();
            }
        } else {
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseDIGIT(): any {
        let s0;

        if (peg$c27.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c28);
            }
        }

        return s0;
    }

    function peg$parseBINDIGITS(): any {
        let s0, s1;

        s0 = [];
        s1 = peg$parseBINDIGIT();
        if (s1 !== peg$FAILED) {
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                s1 = peg$parseBINDIGIT();
            }
        } else {
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseBINDIGIT(): any {
        let s0;

        if (peg$c29.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c30);
            }
        }

        return s0;
    }

    function peg$parseHEXDIGITS(): any {
        let s0, s1;

        s0 = [];
        s1 = peg$parseHEXDIGIT();
        if (s1 !== peg$FAILED) {
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                s1 = peg$parseHEXDIGIT();
            }
        } else {
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseHEXDIGIT(): any {
        let s0;

        if (peg$c12.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c13);
            }
        }

        return s0;
    }

    function peg$parse_(): any {
        let s0, s1;

        s0 = [];
        if (peg$c31.test(input.charAt(peg$currPos))) {
            s1 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c32);
            }
        }
        if (s1 !== peg$FAILED) {
            while (s1 !== peg$FAILED) {
                s0.push(s1);
                if (peg$c31.test(input.charAt(peg$currPos))) {
                    s1 = input.charAt(peg$currPos);
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c32);
                    }
                }
            }
        } else {
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parse__(): any {
        let s0;

        if (peg$c33.test(input.charAt(peg$currPos))) {
            s0 = input.charAt(peg$currPos);
            peg$currPos++;
        } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c34);
            }
        }

        return s0;
    }

    peg$result = peg$startRuleFunction();

    if (peg$result !== peg$FAILED && peg$currPos === input.length) {
        return peg$result;
    } else {
        if (peg$result !== peg$FAILED && peg$currPos < input.length) {
            peg$fail(peg$endExpectation());
        }

        throw peg$buildStructuredError(
            peg$maxFailExpected,
            peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
            peg$maxFailPos < input.length
                ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
                : peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
        );
    }
}

export interface IParseOptions {
    filename?: string;
    startRule?: string;
    tracer?: any;

    [key: string]: any;
}

export type ParseFunction = (input: string, options?: IParseOptions) => any;
export const parse: ParseFunction = peg$parse;

